// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown #handleArrowKeyPress opens dropdown on down arrow key press 1`] = `
<body>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown-1"
    data-visible="true"
  >
    
    
    <button
      aria-controls="dropdown-menu-1"
      aria-expanded="true"
      aria-haspopup="true"
      data-parent="dropdown-1"
      data-target="dropdown-menu-1"
      id="trigger-id-1"
    >
      Open Dropdown
    </button>
    
    
    <ul
      aria-labelledby="trigger-id-1"
      class="dropdown-menu"
      id="dropdown-menu-1"
    >
      
      
      <li>
        <a
          href="#"
          tabindex="0"
        >
          Item 1
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="0"
        >
          Item 2
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="0"
        >
          Item 3
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  

</body>
`;

exports[`Dropdown #handleArrowKeyPress opens dropdown on up arrow key press 1`] = `
<body>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown-1"
    data-visible="true"
  >
    
    
    <button
      aria-controls="dropdown-menu-1"
      aria-expanded="true"
      aria-haspopup="true"
      data-parent="dropdown-1"
      data-target="dropdown-menu-1"
      id="trigger-id-1"
    >
      Open Dropdown
    </button>
    
    
    <ul
      aria-labelledby="trigger-id-1"
      class="dropdown-menu"
      id="dropdown-menu-1"
    >
      
      
      <li>
        <a
          href="#"
          tabindex="0"
        >
          Item 1
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="0"
        >
          Item 2
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="0"
        >
          Item 3
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  

</body>
`;

exports[`Dropdown #handleClick opens clicked dropdown 1`] = `
<body>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown-1"
    data-visible="true"
  >
    
    
    <button
      aria-controls="dropdown-menu-1"
      aria-expanded="true"
      aria-haspopup="true"
      data-parent="dropdown-1"
      data-target="dropdown-menu-1"
      id="trigger-id-1"
    >
      Open Dropdown
    </button>
    
    
    <ul
      aria-labelledby="trigger-id-1"
      class="dropdown-menu"
      id="dropdown-menu-1"
    >
      
      
      <li>
        <a
          href="#"
          tabindex="0"
        >
          Item 1
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="0"
        >
          Item 2
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="0"
        >
          Item 3
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  

</body>
`;

exports[`Dropdown #handleClose closes dropdown 1`] = `
<body>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown-1"
    data-visible="false"
  >
    
    
    <button
      aria-controls="dropdown-menu-1"
      aria-expanded="false"
      aria-haspopup="true"
      data-parent="dropdown-1"
      data-target="dropdown-menu-1"
      id="trigger-id-1"
      tabindex="-1"
    >
      Open Dropdown
    </button>
    
    
    <ul
      aria-labelledby="trigger-id-1"
      class="dropdown-menu"
      id="dropdown-menu-1"
    >
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 1
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 2
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 3
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  

</body>
`;

exports[`Dropdown #handleEscapeKeyPress closes dropdown 1`] = `
<body>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown-id-1"
    data-visible="false"
  >
    
    
    <button
      aria-controls="new-dropdown"
      aria-expanded="false"
      aria-haspopup="true"
      data-parent="dropdown-id-1"
      data-target="new-dropdown"
      id="trigger-id-1"
      tabindex="-1"
    >
      Open Dropdown
    </button>
    
    
    <ul
      aria-labelledby="trigger-id-1"
      class="dropdown-menu"
      id="new-dropdown"
    >
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 1
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 2
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 3
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown2"
  >
    
    
    <button
      aria-controls="dropdown-id-2"
      aria-expanded="false"
      aria-haspopup="true"
      data-parent="dropdown2"
      data-target="dropdown-id-2"
      id="trigger-id-2"
    >
      Open Dropdown 2
    </button>
    
    
    <ul
      aria-labelledby="trigger-id-2"
      class="dropdown-menu"
      id="dropdown-id-2"
    >
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 1
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  

</body>
`;

exports[`Dropdown #handleFirstTabClose & #handleLastTabClose closes dropdown if shift + tab key is pressed in open menu while first child is focused 1`] = `
<body>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown-1"
    data-visible="false"
  >
    
    
    <button
      aria-controls="dropdown-menu-1"
      aria-expanded="false"
      aria-haspopup="true"
      data-parent="dropdown-1"
      data-target="dropdown-menu-1"
      id="trigger-id-1"
      tabindex="-1"
    >
      Open Dropdown
    </button>
    
    
    <ul
      aria-labelledby="trigger-id-1"
      class="dropdown-menu"
      id="dropdown-menu-1"
    >
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 1
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 2
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 3
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  

</body>
`;

exports[`Dropdown #handleFirstTabClose & #handleLastTabClose closes dropdown if tab key is pressed in open menu while last child is focused 1`] = `
<body>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown-1"
    data-visible="false"
  >
    
    
    <button
      aria-controls="dropdown-menu-1"
      aria-expanded="false"
      aria-haspopup="true"
      data-parent="dropdown-1"
      data-target="dropdown-menu-1"
      id="trigger-id-1"
      tabindex="-1"
    >
      Open Dropdown
    </button>
    
    
    <ul
      aria-labelledby="trigger-id-1"
      class="dropdown-menu"
      id="dropdown-menu-1"
    >
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 1
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 2
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 3
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  

</body>
`;

exports[`Dropdown #handleOffMenuClick closes dropdown 1`] = `
<body>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown-id-1"
    data-visible="false"
  >
    
    
    <button
      aria-controls="new-dropdown"
      aria-expanded="false"
      aria-haspopup="true"
      data-parent="dropdown-id-1"
      data-target="new-dropdown"
      id="trigger-id-1"
      tabindex="-1"
    >
      Open Dropdown
    </button>
    
    
    <ul
      aria-labelledby="trigger-id-1"
      class="dropdown-menu"
      id="new-dropdown"
    >
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 1
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 2
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 3
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown2"
  >
    
    
    <button
      aria-controls="dropdown-id-2"
      aria-expanded="false"
      aria-haspopup="true"
      data-parent="dropdown2"
      data-target="dropdown-id-2"
      id="trigger-id-2"
    >
      Open Dropdown 2
    </button>
    
    
    <ul
      aria-labelledby="trigger-id-2"
      class="dropdown-menu"
      id="dropdown-id-2"
    >
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 1
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  

</body>
`;

exports[`Dropdown API start sets attributes 1`] = `
<body>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown-1"
  >
    
    
    <button
      aria-controls="dropdown-menu-1"
      aria-expanded="false"
      aria-haspopup="true"
      data-parent="dropdown-1"
      data-target="dropdown-menu-1"
      id="trigger-id-1"
    >
      Open Dropdown
    </button>
    
    
    <ul
      aria-labelledby="trigger-id-1"
      class="dropdown-menu"
      id="dropdown-menu-1"
    >
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 1
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 2
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 3
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  

</body>
`;

exports[`Dropdown API stop + #handleClick does not open dropdown 1`] = `
<body>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown-1"
  >
    
    
    <button
      aria-controls="dropdown-menu-1"
      aria-expanded="false"
      aria-haspopup="true"
      data-parent="dropdown-1"
      data-target="dropdown-menu-1"
      id="trigger-id-1"
    >
      Open Dropdown
    </button>
    
    
    <ul
      aria-labelledby="trigger-id-1"
      class="dropdown-menu"
      id="dropdown-menu-1"
    >
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 1
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 2
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 3
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  

</body>
`;

exports[`Dropdown Multiple Dropdowns closes first dropdown if second dropdown is clicked 1`] = `
<body>
  
  
  <div
    class="dropdown"
    data-dropdown="dropdown-1"
    data-visible="false"
  >
    
    
    <button
      aria-controls="dropdown-menu-1"
      aria-expanded="false"
      aria-haspopup="true"
      data-parent="dropdown-1"
      data-target="dropdown-menu-1"
      id="trigger-id-1"
    >
      Open Dropdown
    </button>
    
    
    <ul
      aria-labelledby="trigger-id-1"
      class="dropdown-menu"
      id="dropdown-menu-1"
    >
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 1
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 2
        </a>
      </li>
      
      
      <li>
        <a
          href="#"
          tabindex="-1"
        >
          Item 3
        </a>
      </li>
      
    
    </ul>
    
  
  </div>
  

        
  <div
    class="dropdown"
    data-dropdown="dropdown-2"
    data-visible="true"
  >
    
          
    <button
      aria-controls="dropdown-menu-2"
      aria-expanded="true"
      aria-haspopup="true"
      data-parent="dropdown-2"
      data-target="dropdown-menu-2"
      id="trigger-id-2"
    >
      Open Dropdown 2
    </button>
    
          
    <ul
      aria-labelledby="trigger-id-2"
      class="dropdown-menu"
      id="dropdown-menu-2"
    >
      
            
      <li>
        <a
          href="#"
          tabindex="0"
        >
          Item 1
        </a>
      </li>
      
          
    </ul>
    
        
  </div>
  
      
</body>
`;
